--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "mongodb": "^3.5.4",
     "mysql": "^2.18.1",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
